# dao-bounty-board

./: .gitignore  Anchor.toml  package.json
app/: next.config.js  package.json  queryClient.ts  tailwind.config.js  tsconfig.json
dev/: commands.md
programs/dao-bounty-board/: Cargo.toml
programs/dao-bounty-board/src/: errors.rs  lib.rs
programs/dao-bounty-board/src/instructions/: accept_submission.rs  add_bounty_board_tier_config.rs  add_contributor_with_role.rs  apply_to_bounty.rs  assign_bounty.rs  bookmark_bounty.rs  close_bounty.rs  close_bounty_activity.rs  close_bounty_application.rs  close_bounty_board.rs  close_bounty_board_vault.rs  close_bounty_bookmark.rs  close_bounty_escrow.rs  close_bounty_submission.rs  close_contributor_record.rs  close_payout_record.rs  create_bounty.rs  delete_bounty.rs  force_accept_submission.rs  init_bounty_board.rs  mod.rs  reject_stale_submission.rs  reject_submission.rs  request_changes_to_submission.rs  submit_to_bounty.rs  unassign_overdue_bounty.rs  update_bounty_board.rs  update_submission.rs
programs/dao-bounty-board/src/state/: bounty.rs  bounty_activity.rs  bounty_application.rs  bounty_board.rs  bounty_bookmark.rs  bounty_submission.rs  contributor_record.rs  mod.rs  payout_record.rs  submission.rs
tests/: add_bounty_board_tier_config.ts  add_contributor_with_role.ts  apply_to_bounty.ts  assign_bounty.ts  constants.ts  create_bounty.ts  dao-bounty-board.ts  delete_bounty.ts  init_bounty_board.ts  reject_stale_submission.ts  reject_submission.ts  request_changes_to_submission.ts  submit_to_bounty.ts  (+3 more)
(+210 files in other folders)
